--- a/how-to.html
+++ b/how-to.html
@@ -5,68 +5,35 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>{ac} alexander castelló / how to</title>
+	<meta name="description" content="how to">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- BOOTSTRAP CSS -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+	<!-- GOOGLE FONTS AND PRELOADING STYLES AND FONTS FOR IMPROVE PERFORMANCE -->
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8G.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/robotoslab/v13/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rj.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="style" href="css/google-fonts-min.css" onload="this.rel='stylesheet'">
 
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8G.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
+	<!-- FONTAWESOME PRELOADING FONTS AND STYLESHEET -->
+	<link rel="preconnect" href="https://kit.fontawesome.com">
+	<link async rel="preload" as="font" type="font/woff2" href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-solid-900.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-brands-400.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
+	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-shims.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
+	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-font-face.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
 
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/robotoslab/v13/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rj.woff2"
-        crossorigin="anonymous" onload="this.rel='font'">
+	<!-- LINE AWESOME PRELOADING FONTS AND STYLE SHEET -->
+	<link async rel="preload" as="style" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" crossorigin="anonymous" onload="this.rel='stylesheet';">
 
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2"
-        crossorigin="anonymous" onload="this.rel='font'">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2"
-        crossorigin="anonymous" onload="this.rel='font'">
-
-    <link async rel="preload" as="style" href="css/google-fonts-min.css" onload="this.rel='stylesheet'">
-
-
-    <!-- FONT AWESOME -->
-    <link rel="preconnect" href="https://kit.fontawesome.com">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-solid-900.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-brands-400.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
-
-    <link async rel="preload" as="style" type="text/css"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free.min.css?token=f5043cec08" crossorigin="anonymous"
-        onload="this.rel='stylesheet';">
-
-    <link async rel="preload" as="style" type="text/css"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-shims.min.css?token=f5043cec08"
-        crossorigin="anonymous" onload="this.rel='stylesheet';">
-
-    <link async rel="preload" as="style" type="text/css"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-font-face.min.css?token=f5043cec08"
-        crossorigin="anonymous" onload="this.rel='stylesheet';">
-
-    <!-- Line awesome -->
-    <link rel="stylesheet"
-        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-
-    <link rel="stylesheet" href="css/style.css">
-
-    <title>{ac} alexander castelló / code & design & plus / how to</title>
-
+	<!-- OWN STYLE SHEET, THAT INCLUDES BOOTSTRAP STYLES FROM SASS SYSTEM -->
+	<link rel="stylesheet" href="./css/style.css">
+	<style></style>
 </head>
 
 <body>
@@ -79,7 +46,7 @@
                     class="navbar navbar-expand-lg navbar-dark bg-transparent col-12 col-lg-11 col-xl-11 py-lg-0 m-lg-0 p-lg-0">
 
                     <div id="brand" class="text-light col-10 col-md-11 col-lg-6 px-0 mx-0">
-                        <div id="brand-h1"><span><a href="#" id="brand-logo" class="text-light"><span
+                        <div id="brand-h1"><span><a href="./index.html" id="brand-logo" class="text-light"><span
                                         id="imago">{ac}</span>
                                     <span id="logo">alexander castelló</span>&nbsp;<span id="slash-logo"
                                         class="d-lg-inline-block">/</span> </a>
@@ -110,7 +77,7 @@
                                 <a class="nav-link" href="./snippets.html" tabindex="-1" aria-disabled="true">Snippets</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./about.html" tabindex="-1" aria-disabled="true">About me</a>
+                                <a class="nav-link" href="./about-me.html" tabindex="-1" aria-disabled="true">About me</a>
                             </li>
                         </ul>
                     </div>
@@ -494,11 +461,11 @@
                 <div class="col-xs-12 col-sm-3">
                     <h5>Sitemap</h5>
                     <ul class="list-unstyled quick-links">
-                        <li><a href="#"><i class="fa fa-angle-double-right"></i> Home</a></li>
-                        <li><a href="#"><i class="fa fa-angle-double-right"></i> How to</a></li>
-                        <li><a href="#"><i class="fa fa-angle-double-right"></i> Resources</a></li>
-                        <li><a href="#"><i class="fa fa-angle-double-right"></i> Snippets</a></li>
-                        <li><a href="#"><i class="fa fa-angle-double-right"></i> About me</a></li>
+                        <li><a href="./index.html"><i class="fa fa-angle-double-right"></i> Home</a></li>
+                        <li><a href="./how-to.html"><i class="fa fa-angle-double-right"></i> How to</a></li>
+                        <li><a href="./resources.html"><i class="fa fa-angle-double-right"></i> Resources</a></li>
+                        <li><a href="./snippets.html"><i class="fa fa-angle-double-right"></i> Snippets</a></li>
+                        <li><a href="./about-me.html"><i class="fa fa-angle-double-right"></i> About me</a></li>
                     </ul>
                 </div>
 
