--- a/resources.html
+++ b/resources.html
@@ -5,68 +5,35 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{ac} alexander castelló / resources</title>
+	<meta name="description" content="resources">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- BOOTSTRAP CSS -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
-    <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+	<!-- GOOGLE FONTS AND PRELOADING STYLES AND FONTS FOR IMPROVE PERFORMANCE -->
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8G.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/robotoslab/v13/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rj.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="style" href="css/google-fonts-min.css" onload="this.rel='stylesheet'">
 
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8G.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
+	<!-- FONTAWESOME PRELOADING FONTS AND STYLESHEET -->
+	<link rel="preconnect" href="https://kit.fontawesome.com">
+	<link async rel="preload" as="font" type="font/woff2" href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-solid-900.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="font" type="font/woff2" href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-brands-400.woff2" crossorigin="anonymous" onload="this.rel='font'">
+	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
+	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-shims.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
+	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-font-face.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
 
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/robotoslab/v13/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rj.woff2"
-        crossorigin="anonymous" onload="this.rel='font'">
+	<!-- LINE AWESOME PRELOADING FONTS AND STYLE SHEET -->
+	<link async rel="preload" as="style" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" crossorigin="anonymous" onload="this.rel='stylesheet';">
 
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2"
-        crossorigin="anonymous" onload="this.rel='font'">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2"
-        crossorigin="anonymous" onload="this.rel='font'">
-
-    <link async rel="preload" as="style" href="css/google-fonts-min.css" onload="this.rel='stylesheet'">
-
-
-    <!-- FONT AWESOME -->
-    <link rel="preconnect" href="https://kit.fontawesome.com">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-solid-900.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
-
-    <link async rel="preload" as="font" type="font/woff2"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-brands-400.woff2" crossorigin="anonymous"
-        onload="this.rel='font'">
-
-    <link async rel="preload" as="style" type="text/css"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free.min.css?token=f5043cec08" crossorigin="anonymous"
-        onload="this.rel='stylesheet';">
-
-    <link async rel="preload" as="style" type="text/css"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-shims.min.css?token=f5043cec08"
-        crossorigin="anonymous" onload="this.rel='stylesheet';">
-
-    <link async rel="preload" as="style" type="text/css"
-        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-font-face.min.css?token=f5043cec08"
-        crossorigin="anonymous" onload="this.rel='stylesheet';">
-
-    <!-- Line awesome -->
-    <link rel="stylesheet"
-        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-
-    <link rel="stylesheet" href="css/style.css">
-
-    <title>{ac} alexander castelló / code & design & plus / resources</title>
-
+	<!-- OWN STYLE SHEET, THAT INCLUDES BOOTSTRAP STYLES FROM SASS SYSTEM -->
+	<link rel="stylesheet" href="./css/style.css">
+	<style></style>
 </head>
 
 <body>
