--- a/snippets.html
+++ b/snippets.html
@@ -4,7 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-	<title>{ac} alexander castelló / snippets</title>
+	<title>{ac} alexander castelló / code & design & plus / snippets</title>
 	<meta name="description" content="snippets">
 
 	<!-- BOOTSTRAP CSS -->
