--- a/how-to.html
+++ b/how-to.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>{ac} alexander castelló / how to</title>
+    <title>{ac} alexander castelló / code & design & plus / how to</title>
 	<meta name="description" content="how to">
 
 	<!-- BOOTSTRAP CSS -->
