--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{ac} alexander castelló / resources</title>
+    <title>{ac} alexander castelló / code & design & plus / resources</title>
 	<meta name="description" content="resources">
 
 	<!-- BOOTSTRAP CSS -->
