--- a/resources.html
+++ b/resources.html
@@ -10,6 +10,7 @@
 
 	<!-- BOOTSTRAP CSS -->
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <link async rel="preload" as="style" href="./css/bootstrap.min.css" onload="this.rel='stylesheet'">
 
 	<!-- GOOGLE FONTS AND PRELOADING STYLES AND FONTS FOR IMPROVE PERFORMANCE -->
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -18,7 +19,7 @@
 	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous" onload="this.rel='font'">
 	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2" crossorigin="anonymous" onload="this.rel='font'">
 	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="style" href="css/google-fonts-min.css" onload="this.rel='stylesheet'">
+	<link async rel="preload" as="style" href="./css/google-fonts-min.css" onload="this.rel='stylesheet'">
 
 	<!-- FONTAWESOME PRELOADING FONTS AND STYLESHEET -->
 	<link rel="preconnect" href="https://kit.fontawesome.com">
