Showing new color palette on index

--- a/how-to.html
+++ b/how-to.html
@@ -109,7 +109,7 @@
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb bg-transparent p-0 m-0 migues">
                                 <li class="breadcrumb-item"><a href="./index.html" class="text-light">Home</a></li>
-                                <li class="breadcrumb-item active text-white font-weight-bold" aria-current="page">
+                                <li class="breadcrumb-item active text-white" aria-current="page">
                                     How to
                                 </li>
                             </ol>
