--- a/index.html
+++ b/index.html
@@ -6,35 +6,57 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{ac} alexander castelló / code & design & plus</title>
-	<meta name="description" content="resources">
+    <meta name="description" content="resources">
 
-	<!-- BOOTSTRAP CSS -->
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <!-- BOOTSTRAP CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link async rel="preload" as="style" href="./css/bootstrap.min.css" onload="this.rel='stylesheet'">
 
-	<!-- GOOGLE FONTS AND PRELOADING STYLES AND FONTS FOR IMPROVE PERFORMANCE -->
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8G.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/robotoslab/v13/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rj.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="style" href="./css/google-fonts-min.css" onload="this.rel='stylesheet'">
+    <!-- GOOGLE FONTS AND PRELOADING STYLES AND FONTS FOR IMPROVE PERFORMANCE -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8G.woff2" crossorigin="anonymous"
+        onload="this.rel='font'">
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://fonts.gstatic.com/s/robotoslab/v13/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISmb2Rj.woff2"
+        crossorigin="anonymous" onload="this.rel='font'">
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://fonts.gstatic.com/s/nunitosans/v6/pe0qMImSLYBIv1o4X1M8cce9I9s.woff2" crossorigin="anonymous"
+        onload="this.rel='font'">
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.118.woff2"
+        crossorigin="anonymous" onload="this.rel='font'">
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://fonts.gstatic.com/s/notosansjp/v28/-F62fjtqLzI2JPCgQBnw7HFow2oe2EcP5pp0erwTqsSWs9Jezazjcb4.119.woff2"
+        crossorigin="anonymous" onload="this.rel='font'">
+    <link async rel="preload" as="style" href="./css/google-fonts-min.css" onload="this.rel='stylesheet'">
 
-	<!-- FONTAWESOME PRELOADING FONTS AND STYLESHEET -->
-	<link rel="preconnect" href="https://kit.fontawesome.com">
-	<link async rel="preload" as="font" type="font/woff2" href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-solid-900.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="font" type="font/woff2" href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-brands-400.woff2" crossorigin="anonymous" onload="this.rel='font'">
-	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
-	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-shims.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
-	<link async rel="preload" as="style" type="text/css" href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-font-face.min.css?token=f5043cec08" crossorigin="anonymous" onload="this.rel='stylesheet';">
+    <!-- FONTAWESOME PRELOADING FONTS AND STYLESHEET -->
+    <link rel="preconnect" href="https://kit.fontawesome.com">
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-solid-900.woff2" crossorigin="anonymous"
+        onload="this.rel='font'">
+    <link async rel="preload" as="font" type="font/woff2"
+        href="https://ka-f.fontawesome.com/releases/v5.15.2/webfonts/free-fa-brands-400.woff2" crossorigin="anonymous"
+        onload="this.rel='font'">
+    <link async rel="preload" as="style" type="text/css"
+        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free.min.css?token=f5043cec08" crossorigin="anonymous"
+        onload="this.rel='stylesheet';">
+    <link async rel="preload" as="style" type="text/css"
+        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-shims.min.css?token=f5043cec08"
+        crossorigin="anonymous" onload="this.rel='stylesheet';">
+    <link async rel="preload" as="style" type="text/css"
+        href="https://ka-f.fontawesome.com/releases/v5.15.2/css/free-v4-font-face.min.css?token=f5043cec08"
+        crossorigin="anonymous" onload="this.rel='stylesheet';">
 
-	<!-- LINE AWESOME PRELOADING FONTS AND STYLE SHEET -->
-	<link async rel="preload" as="style" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" crossorigin="anonymous" onload="this.rel='stylesheet';">
+    <!-- LINE AWESOME PRELOADING FONTS AND STYLE SHEET -->
+    <link async rel="preload" as="style"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+        crossorigin="anonymous" onload="this.rel='stylesheet';">
 
-	<!-- OWN STYLE SHEET, THAT INCLUDES BOOTSTRAP STYLES FROM SASS SYSTEM -->
-	<link rel="stylesheet" href="./css/style.css">
-	<style></style>
+    <!-- OWN STYLE SHEET, THAT INCLUDES BOOTSTRAP STYLES FROM SASS SYSTEM -->
+    <link rel="stylesheet" href="./css/style.css">
+    <style></style>
 </head>
 
 <body>
@@ -47,7 +69,8 @@
                     class="navbar navbar-expand-lg navbar-dark bg-transparent col-12 col-lg-11 col-xl-11 py-lg-0 m-lg-0 p-lg-0">
 
                     <div id="brand" class="text-light col-10 col-md-11 col-lg-6 px-0 mx-0">
-                        <div id="brand-h1"><span><a href="./index.html" id="brand-logo" class="text-light"><span id="imago">{ac}</span>
+                        <div id="brand-h1"><span><a href="./index.html" id="brand-logo" class="text-light"><span
+                                        id="imago">{ac}</span>
                                     <span id="logo">alexander castelló</span>&nbsp;<span id="slash-logo"
                                         class="d-lg-inline-block">/</span> </a>
                                 <span id="brand-tag" class="d-block d-lg-inline-block py-1">code&nbsp;& design&nbsp;&
@@ -71,21 +94,24 @@
                                 <a class="nav-link" href="./how-to.html" tabindex="-1" aria-disabled="true">How to</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./resources.html" tabindex="-1" aria-disabled="true">Resources</a>
+                                <a class="nav-link" href="./resources.html" tabindex="-1"
+                                    aria-disabled="true">Resources</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./snippets.html" tabindex="-1" aria-disabled="true">Snippets</a>
+                                <a class="nav-link" href="./snippets.html" tabindex="-1"
+                                    aria-disabled="true">Snippets</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./about-me.html" tabindex="-1" aria-disabled="true">About me</a>
+                                <a class="nav-link" href="./about-me.html" tabindex="-1" aria-disabled="true">About
+                                    me</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
 
                 <div id="loginarea" class="col-12 col-lg-1 text-right my-auto px-0">
-                    <button class="col-4 col-sm-3 col-lg-12  btn btn-sm btn-outline-light my-2" type="button" data-toggle="modal"
-                        data-target="#login">Log in</button>
+                    <button class="col-4 col-sm-3 col-lg-12  btn btn-sm btn-outline-light my-2" type="button"
+                        data-toggle="modal" data-target="#login">Log in</button>
                     <button class="col-4 col-sm-3 col-lg-12 btn btn-sm btn-secondary" type="button" data-toggle="modal"
                         data-target="#signin">Sign in</button>
                 </div>
@@ -98,16 +124,17 @@
     <main>
 
         <!-- BIG HERO -->
-        <section class="container-fluid border-bottom" id="bighero">
+        <section class="container-fluid" id="bighero">
 
-            <div class="container py-5 py-sm-5">
+            <div class="container py-5 py-sm-5 py-md-1">
                 <div class="row py-md-5 justify-content-lg-start align-items-center">
 
                     <div class="col-lg-6 text-shadow" id="titol">
                         <header>
                             <h1 class="text-white p-0 m-0 text-uppercase">Welcome</h1>
                         </header>
-                        <p class="text-light mr-md-5 pr-md-5">An ordinary lorem but an extraordinary ipsum for the mankind dolor
+                        <p class="text-light mr-md-5 pr-md-5">An ordinary lorem but an extraordinary ipsum for the
+                            mankind dolor
                             sit amet consectetur adipisicing elit. Rerum similique nemo dolore accusantium laudantium
                             illo tempora facilis, voluptatem cumque laborum sequi id.</p>
                     </div>
@@ -153,6 +180,84 @@
         </section>
         <!-- FINAL BIG HERO -->
 
+        <section class="container-fluid py-md-5 bg-dark">
+            <div class="container-fluid">
+
+                    <h2 class="sectitol__h2 text-light font-weight-lighter">
+                        REDEFINED COLOR PALLETTE
+                    </h2>
+
+
+                <div class="row justify-content-around  text-light">
+
+
+
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-blue">
+                            <div class="card-body">
+                                <h5 class="card-title">BLUE</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-indigo">
+                            <div class="card-body">
+                                <h5 class="card-title">INDIGO</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-purple">
+                            <div class="card-body">
+                                <h5 class="card-title">PURPLE</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-pink">
+                            <div class="card-body">
+                                <h5 class="card-title">PINK</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-red">
+                            <div class="card-body">
+                                <h5 class="card-title">RED</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-orange">
+                            <div class="card-body">
+                                <h5 class="card-title">ORANGE</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-yellow">
+                            <div class="card-body">
+                                <h5 class="card-title">YELLOW</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-green">
+                            <div class="card-body">
+                                <h5 class="card-title">GREEN</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-teal">
+                            <div class="card-body">
+                                <h5 class="card-title">TEAL</h5>
+
+                            </div>
+                        </div>
+                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-cyan">
+                            <div class="card-body">
+                                <h5 class="card-title">CYAN</h5>
+
+                            </div>
+                        </div>
+
+                </div>
+            </div>
+        </section>
+
+
         <!-- SECCIÓ 1 -->
         <div class="container-fluid">
             <section class="container px-4 py-4 py-md-5 p-md-0">
@@ -160,9 +265,11 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="sectitol__h2 text-uppercase p-0 m-0">Graphic, Web & Multimedia Design</h2>
                         <h3 class="sectitol__h3">From ink to pixels </h3>
-                        <p>It was an evolution more than a revolution for those who we lived the transition from an old era pre-digital to now. It's not only a lorem ipsum, dolor sit
+                        <p>It was an evolution more than a revolution for those who we lived the transition from an old
+                            era pre-digital to now. It's not only a lorem ipsum, dolor sit
                             amet consectetur adipisicing elit. Odio praesentium minus velit eligendi,
-                            explicabo quas enim vel nulla alias blanditiis error consequatur asperiores pariatur voluptate
+                            explicabo quas enim vel nulla alias blanditiis error consequatur asperiores pariatur
+                            voluptate
                             rem laudantium reprehenderit eveniet! Quisquam iusto alias enim, in beatae et obcaecati
                             consequatur. Vitae ipsa, est nihil nesciunt sunt corporis labore distinctio magni nisi
                             provident!</p>
@@ -172,19 +279,26 @@
 
                     <div class="col-12 col-lg-6">
                         <h3 class="sectitol_h3">Then and now</h3>
-                        <p>Wherever you go ipsum dolor sit amet consectetur adipisicing elit. Eveniet neque, laborum fugiat,
-                            molestiae dicta harum nostrum laboriosam ipsa rerum dolorem dolor impedit eligendi placeat.</p>
+                        <p>Wherever you go ipsum dolor sit amet consectetur adipisicing elit. Eveniet neque, laborum
+                            fugiat,
+                            molestiae dicta harum nostrum laboriosam ipsa rerum dolorem dolor impedit eligendi placeat.
+                        </p>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aspernatur nisi nobis dignissimos
-                            commodi quaerat, aut assumenda sapiente rerum. Quia similique sed repudiandae rerum expedita,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aspernatur nisi nobis
+                            dignissimos
+                            commodi quaerat, aut assumenda sapiente rerum. Quia similique sed repudiandae rerum
+                            expedita,
                             libero ipsum dolorem blanditiis nihil distinctio nisi.</p>
-                        <p>Blanditiis est excepturi ipsum, ab ea fugit explicabo et ullam quasi, eius iusto eum minima nemo
+                        <p>Blanditiis est excepturi ipsum, ab ea fugit explicabo et ullam quasi, eius iusto eum minima
+                            nemo
                             sapiente.</p>
 
                         <h4 class="sectitol_h4">Bootstrap doesn't KISS.</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum labore, corporis ad debitis sed
-                            repudiandae rerum expedita, libero ipsum dolorem necessitatibus excepturi, harum explicabo.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum labore, corporis ad debitis
+                            sed
+                            repudiandae rerum expedita, libero ipsum dolorem necessitatibus excepturi, harum explicabo.
+                        </p>
                     </div>
                 </div>
             </section>
