Some changes in index.html layout regards the redefined color pallette

--- a/index.html
+++ b/index.html
@@ -181,72 +181,75 @@
         <!-- FINAL BIG HERO -->
 
         <section class="container-fluid py-md-5 bg-dark">
-            <div class="container-fluid">
+            <div class="container">
 
                     <h2 class="sectitol__h2 text-light font-weight-lighter">
                         REDEFINED COLOR PALLETTE
                     </h2>
+                    <p class="text-light">
+                        This colors are changed on __variables.css and has been used with its $name in SASS on style.scss.
+                    </p>
 
 
-                <div class="row justify-content-around  text-light">
+                <div class="row justify-content-start text-light">
 
 
 
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-blue">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-blue">
                             <div class="card-body">
                                 <h5 class="card-title">BLUE</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-indigo">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-indigo">
                             <div class="card-body">
                                 <h5 class="card-title">INDIGO</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-purple">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-purple">
                             <div class="card-body">
                                 <h5 class="card-title">PURPLE</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-pink">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-pink">
                             <div class="card-body">
                                 <h5 class="card-title">PINK</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-red">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-red">
                             <div class="card-body">
                                 <h5 class="card-title">RED</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-orange">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-orange">
                             <div class="card-body">
                                 <h5 class="card-title">ORANGE</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-yellow">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-yellow">
                             <div class="card-body">
                                 <h5 class="card-title">YELLOW</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-green">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-green">
                             <div class="card-body">
                                 <h5 class="card-title">GREEN</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-teal">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-teal">
                             <div class="card-body">
                                 <h5 class="card-title">TEAL</h5>
 
                             </div>
                         </div>
-                        <div class="card col-4 col-sm-6 col-md-2 col-xl-1 mx-1 my-1 bg-cyan">
+                        <div class="card col-4 col-sm-6 col-md-2 mx-1 my-1 bg-cyan">
                             <div class="card-body">
                                 <h5 class="card-title">CYAN</h5>
 
