some layout changes more

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </section>
         <!-- FINAL BIG HERO -->
 
-        <section class="container-fluid py-md-5 bg-dark">
+        <section class="container-fluid py-md-5 bg-dark section__dark">
             <div class="container">
 
                     <h2 class="sectitol__h2 text-light font-weight-lighter">
